Fixed the bug: The user profile will not wrap in some cases.

--- a/view/default/theme/style.css
+++ b/view/default/theme/style.css
@@ -844,6 +844,7 @@ img .avatar {
 	max-width: 462px;
 }
 .member-detail p {
+	word-break:break-all;
 	color:#666;
 	font-size:15px;
 	line-height:20px;
